word wrap fix in the grey box

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html { overflow-y: scroll; }
 .grey {
 	background: #eee;
 	padding: 1rem;
+	word-wrap: break-word;
 }
 
 a img:hover {
